# grayscale

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
.github/workflows/: main.yml
include/: grayscale.hpp
pages/: index.html
src/: grayscale.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: app.cpp
unittest/: CMakeLists.txt
unittest/src/: test_grayscale_conversion.cpp
